[package]
name = "lords_simulator"
version = "0.1.0"
authors = ["Lord"]
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = "0.24.1"
eframe = { version = "0.24.1", features = [

    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4.20"

# You only need serde if you want app persistence:
serde = { version = "1.0.194", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.1"

[profile.release]
opt-level = 3

[profile.dev.package."*"]
opt-level = 2