[package]
name = "lords_gui"
version = "0.1.0"
authors = ["Lord"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.92.0"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
lords_sim = { path = "../lords_sim" }
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
log = "0.4.29"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"